--- a/src/Styles/cartDisplay.css
+++ b/src/Styles/cartDisplay.css
@@ -6,7 +6,7 @@
     /*height: calc(100vh - 100px);*/
     margin-top: 80px;
     margin-bottom: 20px;
-    min-width: 1000px;
+    min-width: auto;
     max-width: 1500px;
     position: absolute;
     background-color: white;
@@ -38,13 +38,18 @@
     position: relative;
     align-items: center;
     padding: 10px;
-    width: 550px;
+    width: calc(100% -10px);
     margin-bottom: 20px;
     /*border: solid;
     border-width: 1px;*/
     box-shadow: 0px 0px 8px darkgray;
     background-color: white;
     /*justify-content: center;*/
+}
+
+.section1
+{
+    width: 570px
 }
 
 .canvas-cart
@@ -151,7 +156,7 @@
 .section2
 {
     position: relative;
-    width: 100%;
+    width: 300px;
     height: 100%;
     /*margin-left: 590px;*/
     padding-left: 20px;
@@ -163,12 +168,17 @@
     box-shadow: 0px 0px 8px darkgray;
     padding-top: 20px;
     padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
 }
 
 .line
 {
     margin-bottom: 20px;
     padding-left: 20px;
+    padding-right: 20px;
+    width: calc(100% - 40px)
 }
 
 .decorative-stripe
@@ -180,11 +190,26 @@
 .place-order
 {
     margin-left: 20px;
-    border-radius: 21.2px;
+    margin-right: 20px;
+    border-radius: 33.2px;
     padding: 5px 10px;
     color: white;
+    /*font-weight: bold;*/
     background-color: orange;
     border: none;
     width: auto;
     font-size: 20px;
+    cursor: pointer;
+}
+
+.place-order:hover
+{
+    background-color: rgb(246, 160, 0);
+}
+
+.end
+{
+    position: absolute;
+    right: 20px;
+    font-weight: bold;
 }
