--- a/src/Styles/sideBar.css
+++ b/src/Styles/sideBar.css
@@ -1,4 +1,4 @@
-.sideBar 
+.side-bar 
 {
     position: fixed;
     left: 0px;
@@ -15,3 +15,18 @@
     height: 100%;
     object-position: -550px;
 }
+
+/*@media(max-width: 1200px)
+{
+    .side-bar
+    {
+        width: 0px;
+        height: 0px;
+        display: none;
+    }
+
+    .Johannesburg
+    {
+        height: 0px;
+    }
+}*/
