--- a/src/Styles/topBars/topBarCart.css
+++ b/src/Styles/topBars/topBarCart.css
@@ -17,10 +17,8 @@
 {
     display: flex;
     position: relative;
-    /*left: 300px;*/
     align-items: center;
     width: calc(100% - 1035.84px);
-    /*justify-content: space-around;*/
 }
 
 .logo-contents-cart
@@ -35,10 +33,6 @@
     height: 40px;
     width: auto;
     white-space: nowrap;
-    /*position: absolute;*/
-    /*left: 300px*/
-    /*display: inline-block;*/
-    /*left: 500px;*/
 }
 
 .logo-contents-cart .k-container
@@ -130,8 +124,9 @@
     border-radius: 38px;
     font-family: "Roboto";
     cursor: pointer;
-    /*position: absolute;*/
     right: 25px;
+    text-decoration: none;
+    color: black;
 }
 
 .attribution-cart:hover
@@ -176,3 +171,141 @@
     margin-top: 12px;
 }
 
+.deco-2
+{
+    display: none;
+}
+
+@media(max-width: 450px)
+{
+    .deco-2
+    {
+        display: block;
+        background-color: lightgray;
+        position: absolute;
+        width: 100%;
+        height: 58.4px;
+        bottom: 0px;
+        border-bottom: solid;
+        border-top: solid;
+        border-width: 1px;
+    }
+
+    .decorative-strip-container
+    {
+        width: 80px;
+        height: 60px;
+    }
+
+    .decorative-strip
+    {
+        object-position: -260px -15px;
+    }
+
+    .decorative-cube
+    {
+        display: none;
+    }
+
+    .search-bar-cart
+    {
+        left: 60px;
+        position: absolute;
+        bottom: 13.4px;
+        right: 15px;
+        width: auto;
+       /*left: 50%;*/
+        /*transform: translateX(-50%);*/
+    }
+
+    .right-package
+    {
+        position: static;
+        /*margin-left: 50%;*/
+        height: 60px;
+        width: 0px;
+        margin-right: 0px;
+    }
+
+    .top-bar-cart
+    {
+        height: 100px;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .logo-contents-cart
+    {
+        font-size: 20px;
+        margin-left: 0px;
+    }
+
+    .left-package
+    {
+        position: static;
+        width: auto;
+    }
+
+    .logo-contents-cart .k-container
+    {
+        height: 32px;
+        width: 32px;
+        font-size: 24px;
+    }
+
+    .home-page-link
+    {
+        font-size: 0px;
+        position: absolute;
+        bottom: 9px;
+        left: 9px;
+    }
+
+    .home-page-link:hover
+    {
+        background-color: darkgray;
+    }
+
+    .attribution-cart
+    {
+        position: absolute;
+        top: 12.4px;
+        right: 0px;
+        border-radius: 0px;
+        border-top-left-radius: 35.2px;
+    }
+
+}
+
+@media(max-width: 740px) and (max-height: 360px)
+{
+    .decorative-strip-container
+    {
+        width: 100px;
+    }
+
+    .decorative-strip
+    {
+        object-position: -260px -15px;
+    }
+
+    .decorative-cube
+    {
+        rotate: 20deg;
+    }
+
+    .search-bar-cart
+    {
+        width: 200px;
+    }
+
+    .left-package
+    {
+        width: calc(100% - 420.84px); 
+    }
+
+    .home-page-link
+    {
+        font-size: 0px;
+    }
+}
