--- a/src/Styles/topBars/topBar.css
+++ b/src/Styles/topBars/topBar.css
@@ -209,7 +209,7 @@
     position: relative;
 }
 
-@media(max-width: 450px)
+@media(max-width: 550px)
 {
     .top-bar
     {
@@ -272,7 +272,7 @@
     }
 }
 
-@media(max-width: 740px) and (max-height: 360px)
+@media(max-width: 890px) and (max-height: 360px)
 {
     .top-bar
     {
@@ -303,5 +303,66 @@
     }
 }
 
+@media(max-width: 900px) and (min-width: 710px) and (min-height: 361px)
+{
+    .top-bar
+    {
+        left: 0px;
+    }
+
+    .category-container
+    {
+        overflow-x: scroll;
+        width: 100%;
+    }
+
+    .category
+    {
+        white-space: nowrap;
+    }
+}
+
+@media(max-width: 1200px) and (min-width: 901px) and (max-height: 900px)
+{
+   .top-bar
+   {
+        left: 400px;
+        height: 140px
+   }
+
+    .search-bar
+    {
+        position: absolute;
+        width: calc(100% - 30px);
+        top: 60px;
+        left: 50%;
+        margin-left: 0px;
+        transform: translateX(-50%);
+    }
+
+    .category-container
+    {
+        overflow-x: scroll;
+        width: 100%;
+    }
+
+    .category
+    {
+        white-space: nowrap;
+    }
+}
+
+@media(max-width: 1200px) and (min-height: 901px) and (max-height: 1400px)
+{
+    .top-bar
+    {
+        left: 0px;
+    }
+
+    .category
+    {
+        white-space: nowrap;
+    }
+}
 
 
